src/objects/Study_Site_Relationship__c.object
<CustomObject>
    <description>CSM - ACN - S0124 - Study Site Relationship</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>CSM - ACN - S0214 - Comment</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeyContacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSM-ACN-S-0124 - Lookup field with object Contact</description>
        <label>Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Study Site Relationships</relationshipLabel>
        <relationshipName>Study_Site_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOS__c</fullName>
        <description>CSM - ACN - S0124 - LOS</description>
        <label>LOS</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabStudy__c</fullName>
        <description>CSM - ACN - S0124 - Lab Study #</description>
        <label>Lab Study #</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteNumber__c</fullName>
        <description>CSM - ACN - S0124 - Site #</description>
        <label>Site #</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>CSM - ACN - S0124 - Master lookup field that filters account of type R&amp;D Clinical site</description>
        <label>Site</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Account is not of type Clinical Site</errorMessage>
            <filterItems>
                <field>Account.RDCategorization__c</field>
                <operation>equals</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Study Site Relationships</relationshipLabel>
        <relationshipName>Study_Site_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SpecificLocationDetails__c</fullName>
        <description>CSM-ACN-S-0124 - Field that will hold the value Specific Location Details, Format: Long Text ares</description>
        <inlineHelpText>Indicate here the details about the internal site location. E.g. room C, floor 4, etc</inlineHelpText>
        <label>Specific Location Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CSM - ACN - S0124 - Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In-Active</fullName>
                </value>
                <value>
                    <fullName>Active-Connectivity</fullName>
                    <isActive>false</isActive>
                    <label>Active-Connectivity</label>
                </value>
                <value>
                    <fullName>Active-Provision&amp;Connectivity</fullName>
                    <isActive>false</isActive>
                    <label>Active-Provision&amp;Connectivity</label>
                </value>
                <value>
                    <fullName>Active-Provisioned</fullName>
                    <isActive>false</isActive>
                    <label>Active-Provisioned</label>
                </value>
                <value>
                    <fullName>Awaiting Sponsor Action</fullName>
                    <isActive>false</isActive>
                    <label>Awaiting Sponsor Action</label>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                    <isActive>false</isActive>
                    <label>Candidate</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Enrolling</fullName>
                    <isActive>false</isActive>
                    <label>Enrolling</label>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                    <isActive>false</isActive>
                    <label>Escalated</label>
                </value>
                <value>
                    <fullName>Failed - Computer</fullName>
                    <isActive>false</isActive>
                    <label>Failed - Computer</label>
                </value>
                <value>
                    <fullName>Failed - Connectivity</fullName>
                    <isActive>false</isActive>
                    <label>Failed - Connectivity</label>
                </value>
                <value>
                    <fullName>Failed - HW and connectivity</fullName>
                    <isActive>false</isActive>
                    <label>Failed - HW and connectivity</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                    <isActive>false</isActive>
                    <label>Initiated</label>
                </value>
                <value>
                    <fullName>Not Initiated</fullName>
                    <isActive>false</isActive>
                    <label>Not Initiated</label>
                </value>
                <value>
                    <fullName>Not Participating</fullName>
                    <isActive>false</isActive>
                    <label>Not Participating</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <isActive>false</isActive>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                    <isActive>false</isActive>
                    <label>Passed</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                    <isActive>false</isActive>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                    <isActive>false</isActive>
                    <label>Terminated</label>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                    <isActive>false</isActive>
                    <label>Unresponsive</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                    <isActive>false</isActive>
                    <label>Verified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudyTherapeuticArea__c</fullName>
        <formula>TEXT( Study__r.TherapeuticArea__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Therapeutic Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <description>CSM - ACN - S0124 - Study</description>
        <label>Study</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipLabel>Study Site Relationships</relationshipLabel>
        <relationshipName>Study_Site_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Study Site Relationship</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>SS Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Site Relationships</pluralLabel>
    <recordTypes>
        <fullName>StudySiteRelationship</fullName>
        <active>true</active>
        <description>CSM - ACN - S0124 - Study Site Relationship</description>
        <label>Study Site Relationship</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>